--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">InSight</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="user_registration">User Registration</string>
+    <string name="already_registered_signin_here">Already Registered? Signin Here</string>
+    <string name="logout">Logout</string>
+    <string name="user_login">User Login</string>
+    <string name="enter_email">Enter email</string>
+    <string name="enter_password">Enter password</string>
+    <string name="signup">Signup</string>
+    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
 </resources>
