--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="enter_password">Enter password</string>
     <string name="signup">Signup</string>
     <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
+    <string name="signin">Sign in</string>
 </resources>
