--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,5 +11,5 @@
     <string name="not_have_an_account_signup_here">Не зарегистрированы?</string>
     <string name="signin">Войти</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="settings">settings</string>
+    <string name="settings">Настройки</string>
 </resources>
