--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="signup">Signup</string>
     <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
     <string name="signin">Sign in</string>
+    <string name="rating">Rating</string>
 </resources>
