Export strings from menu to lang files

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,8 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="rating">Рейтинг</string>
     <string name="settings">Настройки</string>
+    <string name="dashboard">dashboard</string>
+    <string name="my_excursions">My Excursions</string>
+    <string name="log_out">Log out</string>
+    <string name="about">About</string>
 </resources>
