--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="enter_password">Enter password</string>
     <string name="signup">Signup</string>
     <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
-    <string name="signin">Sign in</string>
+    <string name="signin">Sign In</string>
     <string name="rating">Rating</string>
     <string name="title_activity_settings">Settings</string>
 
