Added translations Подавляем восстание машин

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,4 +18,6 @@
     <string name="about">About</string>
     <string name="email">E-mail</string>
     <string name="password">Пароль</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="search">Поиск</string>
 </resources>
