--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,12 @@
     <string name="about">About</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
+    <string name="title_activity_menu_main">MenuMainActivity</string>
+    <string name="drawer_my_excursions">My Excursions</string>
+    <string name="drawer_search">Search</string>
+    <string name="darawer_create_excursion">Create Excursion</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="drawer_info">About</string>
+    <string name="drawer_log_out">Log Out</string>
+    <string name="service">Service</string>
 </resources>
