Modified EmailPassActivityReg form, added link to registration in MainActivity, added some changes to EmailPassActivityReg code

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,4 +20,5 @@
     <string name="password">Пароль</string>
     <string name="title_activity_settings">Настройки</string>
     <string name="search">Поиск</string>
+    <string name="login">Логин</string>
 </resources>
