--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">InSight</string>
-    <string name="user_registration">User Registration</string>
+    <string name="user_registration">Registration</string>
     <string name="already_registered_signin_here">Already Registered? Signin Here</string>
     <string name="logout">Logout</string>
     <string name="user_login">User Login</string>
@@ -100,4 +100,5 @@
     <string name="about">About</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
+    <string name="login">Login</string>
 </resources>
