--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,13 @@
     <string name="drawer_log_out">Log Out</string>
     <string name="service">Service</string>
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="recently_added">Recently added</string>
+    <string name="find_your_way">Find your way</string>
+    <string name="explore">Explore</string>
+    <string name="share_your_experience">Share your experience</string>
+    <string name="create">Create</string>
+    <string name="more_info">More info</string>
+    <string name="organize">Organize</string>
+    <string name="participate_in">Participate in</string>
+    <string name="friendly_reminder">Friendly reminder of your excursions</string>
 </resources>
