--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,7 +116,7 @@
     <string name="share_your_experience">Share your experience</string>
     <string name="create">Create</string>
     <string name="more_info">More info</string>
-    <string name="organize">Organize</string>
+    <string name="organize">Organized</string>
     <string name="participate_in">Participate in</string>
     <string name="friendly_reminder">Friendly reminder of your excursions</string>
     <string name="title_activity_profile">ProfileActivity</string>
