--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,8 +130,11 @@
     <string name="friendly_reminder">Friendly reminder of your excursions</string>
     <string name="username_nav_placeholder">UserName</string>
     <string name="useremail_nav_placeholder">UserEmail@gmail.com</string>
-    <string name="description">Description</string>
     <string name="date_and_time">Date and time</string>
     <string name="meeting_point">Meeting point</string>
     <string name="language">Language</string>
+    <string name="date">Date</string>
+    <string name="description">Description</string>
+    <string name="name">Name</string>
+    <string name="edit_picture">Edit picture</string>
 </resources>
