--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -49,4 +49,5 @@
     <string name="explore">Исследуйте</string>
     <string name="username_nav_placeholder">UserName</string>
     <string name="useremail_nav_placeholder">UserEmail@gmail.com</string>
+    <string name="repeat_password">Повторите пароль</string>
 </resources>
