--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,5 @@
     <string name="meeting_point">Meeting point</string>
     <string name="language">Language</string>
     <string name="Author_name_not_found">Author name not found</string>
+    <string name="repeat_password">Repeat password</string>
 </resources>
