Some backend of excursions edit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,7 +135,6 @@
     <string name="description">Description</string>
     <string name="date_and_time">Date and time</string>
     <string name="meeting_point">Meeting point</string>
-    <string name="language">Language</string>
     <string name="Author_name_not_found">Author name not found</string>
     <string-array name="Languages">
         <item>English</item>
@@ -144,4 +143,9 @@
         <item>German</item>
     </string-array>
     <string name="repeat_password">Repeat password</string>
+    <string name="edit_excursion">Edit excursion</string>
+    <string name="maximum_visitors">Maximum visitors</string>
+    <string name="confirm_changes">Confirm changes</string>
+    <string name="edit_image">Edit image</string>
+    <string name="language">Language</string>
 </resources>
