Changes of  edit excursion activity design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,5 @@
     <string name="confirm_changes">Confirm changes</string>
     <string name="edit_image">Edit image</string>
     <string name="language">Language</string>
+    <string name="Edit_Excursion">Edit Excursion</string>
 </resources>
