--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -50,4 +50,8 @@
     <string name="username_nav_placeholder">UserName</string>
     <string name="useremail_nav_placeholder">UserEmail@gmail.com</string>
     <string name="repeat_password">Повторите пароль</string>
+    <string name="description">Описание</string>
+    <string name="date_and_time">Дата и время</string>
+    <string name="meeting_point">Место встречи</string>
+    <string name="language">Язык</string>
 </resources>
