--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
 
+    <string name="pref_header_debug" translatable="false">Debug</string>
+
     <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
@@ -73,6 +75,8 @@
     <string-array name="multi_select_list_preference_default_value" />
 
     <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
+
+    <string name="Toas" translatable="false">Get current user data</string>
 
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications" translatable="false">Notifications</string>
@@ -154,4 +158,5 @@
     <string name="edit_image">Edit image</string>
     <string name="language">Language</string>
     <string name="Edit_Excursion">Edit Excursion</string>
+    <string name="pref_title_debug_get_curr_user_data">Get current user\'s data</string>
 </resources>
