--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,22 +10,19 @@
     <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
     <string name="signin">Sign In</string>
     <string name="rating">Rating</string>
-    <string name="title_activity_settings" translatable="false">Settings</string>
+    <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general" translatable="false">General</string>
+    <string name="pref_header_general">General</string>
 
-    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
-        based on your message history
-    </string>
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
 
-    <string name="pref_title_display_name" translatable="false">Display name</string>
-    <string name="pref_default_display_name" translatable="false">John Smith</string>
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
 
-    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
         <item>When possible</item>
@@ -38,11 +35,11 @@
     </string-array>
 
     <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
+    <string name="pref_header_data_sync">Data and sync</string>
 
-    <string name="pref_header_debug" translatable="false">Debug</string>
+    <string name="pref_header_debug">Debug</string>
 
-    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
+    <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
@@ -74,32 +71,32 @@
 
     <string-array name="multi_select_list_preference_default_value" />
 
-    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
+    <string name="pref_title_system_sync_settings">System sync settings</string>
 
-    <string name="Toas" translatable="false">Get current user data</string>
+    <string name="Toas">Get current user data</string>
 
     <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications" translatable="false">Notifications</string>
+    <string name="pref_header_notifications">Notifications</string>
 
-    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
+    <string name="pref_title_new_message_notifications">New message notifications</string>
 
-    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
-    <string name="pref_ringtone_silent" translatable="false">Silent</string>
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
 
-    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
+    <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings">Settings</string>
     <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
 
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
-    <string name="action_settings" translatable="false">Settings</string>
+    <string name="action_settings">Settings</string>
     <string name="title_activity_main2" translatable="false">Main2Activity</string>
     <string name="radiobutton" translatable="false">RadioButton</string>
     <string name="title_activity_test" translatable="false">TestActivity</string>
-    <string name="dashboard">dashboard</string>
+    <string name="dashboard">Dashboard</string>
     <string name="my_excursions">My Excursions</string>
-    <string name="search" translatable="false">Search</string>
+    <string name="search">Search</string>
     <string name="log_out">Log out</string>
     <string name="about">About</string>
     <string name="email">E-mail</string>
@@ -114,7 +111,7 @@
     <string name="trip_create_ET_address">Enter address of meeting</string>
     <string name="trip_create_ET_description">Tell about your trip</string>
     <string name="login">Login</string>
-    <string name="title_activity_menu_main">MenuMainActivity</string>
+    <string name="title_activity_menu_main" translatable="false">MenuMainActivity</string>
     <string name="drawer_my_excursions">My Excursions</string>
     <string name="drawer_search">Search</string>
     <string name="darawer_create_excursion">Create Excursion</string>
@@ -122,7 +119,7 @@
     <string name="drawer_info">About</string>
     <string name="drawer_log_out">Log Out</string>
     <string name="service">Service</string>
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
     <string name="recently_added">Recently added</string>
     <string name="find_your_way">Find your way</string>
     <string name="explore">Explore</string>
@@ -132,8 +129,8 @@
     <string name="organize">Organized</string>
     <string name="participate_in">Participate in</string>
     <string name="friendly_reminder">Friendly reminder of your excursions</string>
-    <string name="title_activity_profile">ProfileActivity</string>
-    <string name="user_photo">user_photo</string>
+    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
+    <string name="user_photo" translatable="false">user_photo</string>
     <string name="username_nav_placeholder">UserName</string>
     <string name="useremail_nav_placeholder">UserEmail@gmail.com</string>
     <string name="date_and_time">Date and time</string>
@@ -159,4 +156,5 @@
     <string name="language">Language</string>
     <string name="Edit_Excursion">Edit Excursion</string>
     <string name="pref_title_debug_get_curr_user_data">Get current user\'s data</string>
+    <string name="pref_description_social_recommendations">Social recommendations</string>
 </resources>
