Доделала how to для поиска и создания

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -83,4 +83,19 @@
     <string name="dashboard">Меню инструментов</string>
     <string name="pref_description_social_recommendations" translatable="false">Возможные друзья</string>
     <string name="user_photo">Фото пользователя</string>
+    <string name="how_to_create_1">Впервые хотите создать экскурсию? Тогда следуйте нашим указаниям и добро пожаловать в туристический мир!</string>
+    <string name="how_to_create_2">Для начала нажмите на «Создавайте.</string>
+    <string name="how_to_create_3">Придумайте название своей экскурсии. Помните, что чем интереснее звучит Ваше название, тем больше людей заинтересуются.</string>
+    <string name="how_to_create_4">Опишите вашу экскурсию. Не надо слишком много текста, так как его могут не читать. Также сюда можно добавить теги, чтобы по ним вашу экскурсию быстрее нашли.</string>
+    <string name="how_to_create_5">Поставьте дату начала вашей экскурсии. Если ваша экскурсия длится несколько дней, то напишите об этом в описании экскурсии.</string>
+    <string name="how_to_create_6">Выберите язык вашей экскурсии.</string>
+    <string name="how_to_create_7">Поставьте место начала вашей экскурсии, чтобы люди знали где собираться.</string>
+    <string name="how_to_create_8">Укажите максимальное количество людей, которые смогут посетить вашу экскурсию.</string>
+    <string name="how_to_create_9">Вы также можете выбрать изображение для вашей экскурсии из галереи вашего устройства либо оставить предлагаемую нами по умолчанию.</string>
+    <string name="how_to_create_10">Нажмите кнопку «Создать экскурсию». Поздравляем, вы создали вашу первую экскурсию, приятного использования нашего приложения!</string>
+    <string name="how_to_search_1">Хотите пойти на экскурсию, но не можете найти интересную? Воспользуйтесь нашим поиском и вы сможете удовлетворить любые свои требования.</string>
+    <string name="how_to_search_2">Для начала зайдите в «Исследуйте».</string>
+    <string name="how_to_search_3">Выберите предпочитаемый язык для экскурсии.</string>
+    <string name="how_to_search_4">Опишите теги (ключевые слова) в описании экскурсии, по ним будет вестись поиск. Например, #обзорная #Ростов-на-Дону.</string>
+    <string name="how_to_search_5">Нажмите кнопку «Искать». Искренне надеемся, что вы нашли необходимое.</string>
 </resources>
