--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -83,4 +83,5 @@
     <string name="dashboard">Меню инструментов</string>
     <string name="pref_description_social_recommendations" translatable="false">Возможные друзья</string>
     <string name="user_photo">Фото пользователя</string>
+    <string name="trip_edit_successfully">Изменения сохранены</string>
 </resources>
