--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="Edit_Excursion">Edit Excursion</string>
     <string name="pref_title_debug_get_curr_user_data">Get current user\'s data</string>
     <string name="pref_description_social_recommendations">Social recommendations</string>
+    <string name="trip_edit_successfully">Изменения сохранены</string>
 </resources>
