--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -100,4 +100,41 @@
     <string name="how_to_search_5">Нажмите кнопку «Искать». Искренне надеемся, что вы нашли необходимое.</string>
     <string name="trip_edit_successfully">Изменения сохранены</string>
     <string name="excursion_name">Excursion Name</string>
+    <string name="message_text">Введите ваше сообщение</string>
+    <string name="dialog_1">Диалог 1</string>
+    <string name="dialog_2">Диалог 2</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="maybe">Возможно</string>
+    <string name="change_pass">Сменить пароль</string>
+    <string name="pls_entr_email">Пожалуйста, введите ваш e-mail</string>
+    <string name="pls_entr_psswrd">Пожалуйста, введите пароль</string>
+    <string name="signing_in_pls_wait">Вход... Пожалуйста, подождите</string>
+    <string name="incc_log_pass_try">Неверный логин</string>
+    <string name="google_auth_err">Что-то пошло не так при попытке подключиться к Google. Пожалуйста, попробуйте еще раз</string>
+    <string name="pass_requirmts">Пароль должен состоять из не менее, чем 6 символов</string>
+    <string name="pls_entr_login">Пожалуйста, введите логин</string>
+    <string name="psswd_dnt_match">Неверный пароль</string>
+    <string name="registr_pls_wait">Регистрация... Пожалуйста, подождите</string>
+    <string name="reg_err">Ошибка регистрации</string>
+    <string name="crete_trip_name">Имя экскурсии</string>
+    <string name="create_trip_description">Описание экскурсии</string>
+    <string name="create_trip_meeting_point">Место встречи</string>
+    <string name="create_trip_max_visitors">Максимум посетителей</string>
+    <string name="confirm">Подтверждение</string>
+    <string name="change_password">Сменить пароль</string>
+    <string name="profile">Профиль</string>
+    <string name="edit_avatar">Редактировать фото</string>
+    <string name="change_name">Сменить имя</string>
+    <string name="change_e_mail">Сменить e-mail</string>
+    <string name="useremail">e-mail пользователя</string>
+    <string name="view_trip_button_who_is_in">Кто пойдет?</string>
+    <string name="author_name">Имя автора</string>
+    <string name="title_list_i_m_organizing">Я провожу</string>
+    <string name="title_list_i_m_participating">Я учавствую</string>
+    <string name="language_selection">Выбрать язык</string>
+    <string name="del_user">Вы отписаны с экскурсии</string>
+    <string name="crete_trip_maxcount_of_visitors">Макс. число посетителей</string>
+    <string name="add_user">Вы записаны на экскурсию</string>
+    <string name="security">Безопасность</string>
 </resources>
